tests/integration/pilot/test_artifacts/pilot-cdb63eb262f9489794e3c1898/TestTraffic/jwt-claim-route/unmatched_with_wrong_claim_and_added_header:404/to_b/_test_context/VirtualService-RequestAuthentication-Gateway.561031408.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gateway
  namespace: echo-2-88348
spec:
  selector:
    istio: aks-istio-ingressgateway-external
  servers:
  - hosts:
    - '*'
    port:
      name: http
      number: 80
      protocol: HTTP
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: default
  namespace: echo-2-88348
spec:
  gateways:
  - gateway
  hosts:
  - foo.bar
  http:
  - match:
    - headers:
        x-jwt-wrong-header:
          exact: header_to_be_deleted
      uri:
        prefix: /
    route:
    - destination:
        host: b
---
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: default
  namespace: aks-istio-system
spec:
  jwtRules:
  - issuer: "test-issuer-1@istio.io"
    jwksUri: "https://raw.githubusercontent.com/istio/istio/master/tests/common/jwt/jwks.json"
    outputClaimToHeaders:
    - header: "x-jwt-nested-key"
      claim: "nested.nested-2.key2"
    - header: "x-jwt-iss"
      claim: "iss"
    - header: "x-jwt-wrong-header"
      claim: "wrong_claim"
